# Finance-Dashboard

./: .env  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/middleware/: auth_middleware.py
app/models/: dashboard.py  record.py  user.py
app/routes/: auth.py  dashboard.py  records.py  users.py
app/services/: auth_service.py  dashboard_service.py  record_service.py  user_service.py
app/utils/: response.py
